--- a/flaskinventory/templates/guides/link_collection.html
+++ b/flaskinventory/templates/guides/link_collection.html
@@ -33,6 +33,7 @@ All resources are curated by the Meteor Team (WP3 of the OPTED Consortium) and t
 ### Germany
 
 - [IVW](https://www.ivw.de/): Circulation of print media (Germany)
+- [LAE](https://www.lae.de/): Readership of news media among decision makers (Germany)
 
 ### Greece
 
