add news site as separate category

--- a/flaskinventory/templates/guides/newsource.html
+++ b/flaskinventory/templates/guides/newsource.html
@@ -108,6 +108,12 @@ The first thing to check is are the "about me" or "imprint" pages.
 
 For some cases, labels need to be inferred. This means that we look for specific key phrases to categorize difficult cases
 
+# News Sites
+
+News sites are digitally native news formats which are highly professionally maintained. 
+They typically label themselves as "news portal", "digital news", "news platform". 
+Not to be confused with "news aggreators" which do not offer news, but just link to them (e.g., Google News).
+
 ## Alternative Media
 
 This type of publication is probably the hardest to identitfy.
