change in front-end

--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -179,7 +179,8 @@
             </label>
             <p class="my-0"><small id="publication-kind-helptext">To identify this information please refer to the learning module.</small></p>
             <select name="publication_kind" class="form-select form-select-lg" id="publication-kind" aria-describedby="publication-kind-feedback" placeholder="Select multiple or add new..." required multiple>
-                        <option value="newspaper">Newspaper / News Site</option>
+                        <option value="newspaper">Newspaper</option>
+                        <option value="news site">News Site</option>
                         <option value="news agency">News Agency</option>
                         <option value="magazine">Magazine</option>
                         <option value="tv show">TV Show / TV Channel</option>
