add youth in frontend

--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -228,6 +228,7 @@
                         <option value="religion">Religion</option>
                         <option value="science">Science & Technology</option>
                         <option value="society">Society & Panorama</option>
+                        <option value="youth">Youth</option>
                     </select>
             <div id="topical-focus-feedback"></div>
         </div>
