--- a/flaskinventory/templates/query/sidebar.html
+++ b/flaskinventory/templates/query/sidebar.html
@@ -145,7 +145,7 @@ function clearFields(event) {
     for (el of all) {
         let entities = el.attributes['data-entities'].value.split(',')
         let diff = selectedEntities.filter(a => entities.includes(a))
-        if (diff.length == 0 && !alwaysVisible.includes(el.id)) {
+        if (diff.length == 0) {
             try {
                 el.tomselect.clear()
             } catch {
