--- a/flaskinventory/templates/view/elements/archive/about.html
+++ b/flaskinventory/templates/view/elements/archive/about.html
@@ -8,6 +8,15 @@
         <dd class="col-sm-9">
             {{entry.access}}
         {% endif %}
+        {% if entry.country %}
+        <dt class="col-sm-3">Countries covered in dataset</dt>
+        <dd class="col-sm-9">
+            {% for country in entry.country %}
+            <span><a href="{{ url_for('view.view_uid', uid=country.uid) }}">{{ country.name }}</a></span>
+            {{ ", " if not loop.last else "" }}
+            {% endfor %}
+        </dd>
+        {% endif %}
         <dt class="col-sm-3 my-4"><h5>Sources included</h5></dt>
         <dd class="col-sm-9 my-4"><small class="text-muted">Shows how many of the sources listed in this inventory are available in the archive.</small></dd>
         <dt class="col-sm-3">Total</dt>
