improved escaping of jinja2 string

--- a/flaskinventory/templates/helpers/_tomselect.html
+++ b/flaskinventory/templates/helpers/_tomselect.html
@@ -300,7 +300,7 @@ if (embeddedJSON) {
     {% elif field.type ==  "TomSelectMultipleField" %}
 
     let tsCreate{{ field.id }} = document.getElementById('{{ field.id }}').hasAttribute('data-ts-create')
-    new TomSelect('#{{ field.id.replace('.', '\\\.').replace('~', '\\\~').replace('|', '\\\|') }}', 
+    new TomSelect("#{{ field.id.replace('.', '\\\.').replace('~', '\\\~').replace('|', '\\\|') }}", 
     {
         create: tsCreate{{ field.id }}, 
         plugins: ['remove_button', 'clear_button'], 
