--- a/flaskinventory/templates/query/tomselect.html
+++ b/flaskinventory/templates/query/tomselect.html
@@ -6,7 +6,7 @@
     
         {% if field.type ==  "TomSelectMultipleField" %}
     
-        new TomSelect('#{{ field.id.replace('.', '\\\.').replace('~', '\\\~').replace('|', '\\\|') }}', 
+        new TomSelect("#{{ field.id.replace('.', '\\\.').replace('~', '\\\~').replace('|', '\\\|') }}", 
         {
             create: false, 
             plugins: ['remove_button', 'clear_button'], 
