--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -80,6 +80,10 @@ If you are not sure where to start, just drop us an email or tweet and we are ha
 
 # Changelog
 
+### 27 Feb 2023 (Version 1.3.2)
+
+ - Bug fixes (see GitHub issues #231, #232)
+
 ### 22 Feb 2023 (Version 1.3.1)
 
  - Bug fixes (see GitHub issues #222, #228, #214)
